--- a/app/src/at-uyennguyen/res/values/strings.xml
+++ b/app/src/at-uyennguyen/res/values/strings.xml
@@ -1,3 +1,39 @@
 <resources>
     <string name="app_name">TrinhNguyen</string>
+    <string name="edittext_hint_your_email">Your email</string>
+    <string name="welcome_back">Welcome Back!</string>
+    <string name="please_login_to_continue">Please login to continue.</string>
+    <string name="email_address">Email address</string>
+    <string name="your_email">Your email</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="your_password">Your password</string>
+    <string name="login">Login</string>
+    <string name="new_to_scratch">New to Scratch?</string>
+    <string name="create_account_here">Create Account Here</string>
+    <string name="back_to_profile">Back to Profile</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="edit_profile_picture">Edit Profile Picture</string>
+    <string name="full_name">Full Name</string>
+    <string name="your_full_name">Your full name</string>
+    <string name="bio">Bio</string>
+    <string name="your_bio">Your bio</string>
+    <string name="private_information">Private Information</string>
+    <string name="email">Email</string>
+    <string name="phone">Phone</string>
+    <string name="your_phone">Your phone</string>
+    <string name="save_profile">Save Profile</string>
+    <string name="create_account">Create Account</string>
+    <string name="scratch">scratch</string>
+    <string name="start_nfrom_scratch">Start  from Scratch</string>
+    <string name="create_account_to_continue">Create account to continue.</string>
+    <string name="password">Password</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="login_here">Login Here</string>
+    <string name="your_full_name_in_profile">Your full name</string>
+    <string name="your_bio_in_profile">Your bio</string>
+    <string name="your_email_in_profile">Your email</string>
+    <string name="your_phone_in_profile">Your phone</string>
+    <string name="your_full_name_in_signin">Your full name</string>
+    <string name="your_email_in_signin">Your email</string>
+    <string name="your_password_in_signin">Your password</string>
 </resources>
