--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -33,4 +33,11 @@
     <string name="hint_enter_your_password">Enter your password</string>
     <string name="hint_enter_your_name">Enter your name</string>
     <string name="hint_enter_your_bio">Enter your bio</string>
+    <string name="textview_my_kitchen">My Kitchen</string>
+    <string name="textview_nick_evans">Nick Evans</string>
+    <string name="textview_potato_master">Potato Master</string>
+    <string name="textview_settings">Settings</string>
+    <string name="textview_23k_likes">23k likes</string>
+    <string name="textview_584_followers">584 followers</string>
+    <string name="textview_dot">.</string>
 </resources>
