--- a/app/src/at-daiho/res/values/strings.xml
+++ b/app/src/at-daiho/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="editProfileActivityPhoneHeader">Phone</string>
     <string name="editProfileActivityPhonePlaceHolder">+1 234 567 89</string>
     <string name="editProfileActivitySaveProfileButtonTitle">Save Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
