--- a/app/src/at-nguyenha/res/values/strings.xml
+++ b/app/src/at-nguyenha/res/values/strings.xml
@@ -30,14 +30,14 @@
     <string name="edittext_hint_phone">+84 386971275</string>
     <string name="button_text_save_profile">Save Profile</string>
 
-    <string name="text_user_bio">Potato Master</string>
-    <string name="hint_enter_your_bio">Enter your bio</string>
-    <string name="textview_my_kitchen">My Kitchen</string>
-    <string name="textview_nick_evans">Nick Evans</string>
-    <string name="textview_potato_master">Potato Master</string>
-    <string name="textview_settings">Settings</string>
-    <string name="textview_23k_likes">23k likes</string>
-    <string name="textview_584_followers">584 followers</string>
-    <string name="textview_dot">.</string>
+    <string name="textview_text_user_bio">Potato Master</string>
+    <string name="edittext_hint_enter_your_bio">Enter your bio</string>
+    <string name="textview_text_my_kitchen">My Kitchen</string>
+    <string name="textview_text_nick_evans">Nick Evans</string>
+    <string name="textview_text_potato_master">Potato Master</string>
+    <string name="textview_text_settings">Settings</string>
+    <string name="textview_text_23k_likes">23k likes</string>
+    <string name="textview_text_584_followers">584 followers</string>
+    <string name="textview_text_text_dot">.</string>
 
 </resources>
