--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -42,4 +42,28 @@
     <string name="textview_584_followers">584 followers</string>
     <string name="textview_settings">\tSettings</string>
     <string name="textview_23k_likes">23k likes</string>
+    <string name="textview_12_likes">12 likes</string>
+    <string name="textview_comment">Comment</string>
+    <string name="textview_12">12</string>
+    <string name="textview_likes">Likes</string>
+    <string name="username_michek">Michel Jackson</string>
+    <string name="username_beb">Bebe Rexha</string>
+    <string name="username_adam">Adam Sandler</string>
+    <string name="username_jack">Jack Maron</string>
+    <string name="username_eddie">Eddie Murphy</string>
+    <string name="username_john">John Snow</string>
+    <string name="username_jay">Jay Witch</string>
+    <string name="username_tom">Tom Bee</string>
+    <string name="username_josh">Josh Edd</string>
+    <string name="username_tony">Tony Jame</string>
+    <string name="preview_1">Bake an impressive dinner party dessert with minimum fuss – these chocolate puddings, also known as chocolate fondant or lava cake, have a lovely gooey centre</string>
+    <string name="preview_2">Using simple storecupboard and freezer ingredients, this pea and chorizo risotto makes an easy midweek meal. Garnish with crisped chorizo and grated parmesan</string>
+    <string name="preview_3">A crispy pie that you can adapt for your needs, add chicken or keep it veggie. A good fail-safe for your repertoire</string>
+    <string name="preview_4">This high fibre dish counts as 3 of your 5-a-day, with a creamy and spicy curried sauce</string>
+    <string name="preview_5">In need of a quick fix? Go Tex-Mex with these fish fajitas that\'ll feed four in less than 15 minutes!...</string>
+    <string name="preview_6">This colourful, flavour-packed pizza is a great storecupboard supper with only five ingredients</string>
+    <string name="preview_7">Not for risotto purists - this simple recipe has just a few ingredients and the stock is added all in one go</string>
+    <string name="preview_8">This southern Italian dish is made with just five ingredients - just use the best tomatoes and bacon you can find</string>
+    <string name="preview_9">A classic combination of flavours for a comforting family meal, with just five ingredients</string>
+    <string name="preview_10">This springtime pasta dish requires just four ingredients. The perfect, fuss-free feast with a creamy sauce and pork meatballs that\'s bound to be a hit...</string>
 </resources>
