--- a/app/src/at-uyennguyen/res/values/strings.xml
+++ b/app/src/at-uyennguyen/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">TrinhNguyen</string>
+    <string name="app_name">UyenNguyen</string>
+    <string name="my_kitchen">My Kitchen</string>
+    <string name="settings">Settings</string>
+    <string name="nick_evans">Nick Evans</string>
+    <string name="potato_master">Potato Master</string>
+    <string name="_584_followers">584 followers</string>
+    <string name="message_no_storage_permission_snackbar">You have to accept the permission</string>
+    <string name="likes">likes</string>
 </resources>
