--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -66,5 +66,7 @@
     <string name="preview_8">This southern Italian dish is made with just five ingredients - just use the best tomatoes and bacon you can find</string>
     <string name="preview_9">A classic combination of flavours for a comforting family meal, with just five ingredients</string>
     <string name="preview_10">This springtime pasta dish requires just four ingredients. The perfect, fuss-free feast with a creamy sauce and pork meatballs that\'s bound to be a hit...</string>
+    <string name="textview_chocola">Chocola</string>
+    <string name="textview_like">%d Likes</string>
 </resources>
 
