add drawer layout

--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyHuynh</string>
+    <string name="tv_email">cuong.le@asiantech.com</string>
 </resources>
