--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyHuynh</string>
     <string name="tv_email">cuong.le@asiantech.com</string>
+    <string name="tv_drawer_open">Open</string>
+    <string name="tv_drawer_close">Close</string>
 </resources>
