--- a/app/src/at-uyennguyen/res/values/strings.xml
+++ b/app/src/at-uyennguyen/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TrinhNguyen</string>
+    <string name="drawer_open">TrinhNguyen</string>
+    <string name="drawer_close">TrinhNguyen</string>
 </resources>
+
