--- a/app/src/at-uyennguyen/res/values/strings.xml
+++ b/app/src/at-uyennguyen/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">TrinhNguyen</string>
     <string name="drawer_open">TrinhNguyen</string>
     <string name="drawer_close">TrinhNguyen</string>
+    <string name="tvFrameLayout">Hello   How are you?</string>
 </resources>
 
