--- a/app/src/at-daiho/res/values/strings.xml
+++ b/app/src/at-daiho/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">DaiHo</string>
     <string name="feed_item_number_of_like">%d like</string>
     <string name="feed_item_number_of_likes">%d likes</string>
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="alertBtnDialogCancel">OK</string>
+    <string name="alertBtnDialogOK">Cancel</string>
 </resources>
