--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -4,4 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tv_title">Step %d</string>
+    <string name="tv_skip">Skip</string>
+    <string name="tv_next">Next</string>
+    <string name="tv_tablayout_home">HOME</string>
+    <string name="tv_tablayout_infor">INFO</string>
+    <string name="tv_tablayout_another">ANOTHER</string>
 </resources>
