--- a/app/src/at-nguyenha/res/values/strings.xml
+++ b/app/src/at-nguyenha/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">TamLe</string>
+    <string name="hello_blank_fragment">Blank</string>
+    <string name="textview_text_step">Step %d</string>
+    <string name="textview_text_skip">SKIP</string>
+    <string name="textview_text_next">NEXT</string>
+    <string name="home_fragment">HOME</string>
+    <string name="info_fragment">INFO</string>
+    <string name="another_fragment">ANOTHER</string>
 </resources>
