--- a/app/src/at-daiho/res/values/strings.xml
+++ b/app/src/at-daiho/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DaiHo</string>
+    <string name="fragment_tutorial_step">Step %d</string>
+    <string name="fragment_tutorial_skip_button_title">Skip</string>
+    <string name="fragment_tutorial_next_button_title">Next</string>
 </resources>
