--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HaHa</string>
-    <string name="texview_skip">SKIP</string>
-    <string name="texview_next">NEXT</string>
+    <string name="textview_skip">SKIP</string>
+    <string name="textview_next">NEXT</string>
     <string name="textview_step">STEP %d</string>
 </resources>
