--- a/app/src/at-uyennguyen/res/values/strings.xml
+++ b/app/src/at-uyennguyen/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="drawer_open">TrinhNguyen</string>
     <string name="drawer_close">TrinhNguyen</string>
     <string name="tvFrameLayout">Hello   How are you?</string>
+    <string name="gallery">Gallery</string>
+    <string name="camera">Camera</string>
 </resources>
