--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -1,12 +1,48 @@
 <resources>
-    <string name="app_name">HauHa</string>
-    <string name="drawer_open">Open</string>
-    <string name="drawer_close">Close</string>
-    <string name="textview_hauhc93_gmail_com">hauhc93@gmail.com</string>
-    <string name="new_picture">New Picture</string>
-    <string name="from_the_camera">From the Camera</string>
-    <string name="open_camera">Open Camera</string>
-    <string name="from_gallery">From Gallery</string>
-    <string name="choose_the_action">Choose the Action</string>
-</resources>
+    <string name="app_name">NhatNguyen</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--Login fragment-->
+    <string name="textview_email_address">Email address</string>
+    <string name="textview_welcome_back">Welcome Back!</string>
+    <string name="textview_please_login_to_continue">Please login to continue.</string>
+    <string name="textview_password">Password</string>
+    <string name="edittext_user_email_com">user@email.com</string>
+    <string name="textview_forget_password">Forget password?</string>
+    <string name="edittext_12345678">12345678</string>
+    <string name="textview_login">Login</string>
+    <string name="textview_new_to_scatch">New to Scatch?</string>
+    <string name="textview_create_account_here">Create Account Here</string>
+    <string name="textview_start_nfrom_scratch">Start\nfrom Scratch</string>
+    <string name="textview_create_account_to_continue">Create account to continue.</string>
+    <string name="textview_fullname">Full Name</string>
+    <string name="edittext_fullname">Nich Evans</string>
+    <string name="textview_create_account">Create Account</string>
+    <string name="textview_already_have_an_account">Already have an account?</string>
+    <string name="textview_login_here">Login Here</string>
+    <string name="edittext_hint_password">Password</string>
+    <string name="edittext_hint_email_address">Email address</string>
+    <string name="textview_edit_profile">Edit Profile</string>
+    <string name="textview_back_to_profile">Back to Profile</string>
+    <string name="textview_edit_profle_picture">Edit Profle Picture</string>
+    <string name="textview_full_name">Full Name</string>
+    <string name="edit_hint_your_name">Your Name</string>
+    <string name="textview_bio">Bio</string>
+    <string name="edittext_hint_bio">Bio</string>
+    <string name="edittext_potato_master">Potato Master</string>
+    <string name="textview_private_infomation">Private Information</string>
+    <string name="textview_email">Email</string>
+    <string name="textview_phone">Phone</string>
+    <string name="edittext_1_234_567_89">+1 234 567 89</string>
+    <string name="edittext_hint_input_phone_number">Input Phone Number</string>
+    <string name="textview_save_profile">Save Profile</string>
+    <string name="textview_hauhc93_gmail_com">hauhc93@gmail.com</string>
+    <string name="drawer_open">OPEN</string>
+    <string name="drawer_close">CLOSE</string>
+    <string name="open_camera">Open camera</string>
+    <string name="from_gallery">From Gallery</string>
+    <string name="choose_the_action">Choose the action</string>
+    <string name="new_picture">New picture</string>
+    <string name="from_the_camera">From the camera</string>
+</resources>
