--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="tablayout_title_recipes">20  \n  Recipes</string>
     <string name="tablayout_title_saved">75  \n  Saved</string>
     <string name="tablayout_title_following">248  \n Following</string>
+    <string name="tv_duration">%d:%d</string>
 
 </resources>
