fix seekbar, add action icon on notification, decorate UI

--- a/app/src/at-nguyenha/res/values/strings.xml
+++ b/app/src/at-nguyenha/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="textview_text_girls_like_you">Girls like you</string>
     <string name="textview_text_marroon5">Marroon 5</string>
     <string name="textview_text_not_music">Không có bài hát</string>
+    <string name="textview_text_back">Back</string>
 
 
 </resources>
