--- a/app/src/at-cuongle/res/values/strings.xml
+++ b/app/src/at-cuongle/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyHuynh</string>
+    <string name="app_name">CuongLe</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -44,5 +44,7 @@
     <string name="tablayout_title_saved">75  \n  Saved</string>
     <string name="tablayout_title_following">248  \n Following</string>
     <string name="tv_duration">%d:%d</string>
+    <string name="toast_destroy_services">Music Service destroyed by user.</string>
+    <string name="channel_name">Foreground Service Channel</string>
 
 </resources>
