--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="edit_text_todo">Todo</string>
     <string name="button_add">Add</string>
     <string name="button_cancel">Cancel</string>
+    <string name="Close">Close</string>
+    <string name="Open">Open</string>
 </resources>
