--- a/app/src/at-hauha/res/values/strings.xml
+++ b/app/src/at-hauha/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="button_cancel">Cancel</string>
     <string name="Close">Close</string>
     <string name="Open">Open</string>
+    <string name="toat_wrong">Input username or password</string>
 </resources>
